--- a/HMS.WPF/Views/AppointmentPatientDetailsView.xaml
+++ b/HMS.WPF/Views/AppointmentPatientDetailsView.xaml
@@ -4,9 +4,157 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HMS.WPF.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             d:DesignHeight="540" d:DesignWidth="640">
+
+    <Grid Background="{StaticResource GreyBG}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="70"/>
+                <RowDefinition Height="70"/>
+                <RowDefinition Height="70"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Column="0" Grid.Row="0" >
+                <TextBlock  Text="{Binding PatientName}" FontSize="24" Style="{StaticResource DetailsInfoTitle}" Foreground="{StaticResource PrimaryColor}" />
+                <TextBlock Text="{Binding PatientType}"  Style="{StaticResource DetailsInfoTitle}" Margin="15 0 0 0" />
+            </StackPanel>
+            <!--Main Buttons-->
+            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Style="{StaticResource DetailsButton}" Margin="15 0 0 0" Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">EDIT
+                    <Button.CommandParameter>
+                        <StackPanel Margin="16">
+                            <TextBox Text="{Binding EditPatientNameTextBox}" materialDesign:HintAssist.Hint="Patient Name"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="PatientNameTextBox"  />
+                            <TextBox Text="{Binding EditPatientAddressTextBox}" materialDesign:HintAssist.Hint="Patient Address"  Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Margin="0 8 0 0" HorizontalAlignment="Left"  Width="200" x:Name="PatientAddressTextBox" />
+                            <DatePicker SelectedDate="{Binding EditPatientBirthDatePicker}" materialDesign:HintAssist.Hint="Employee BirthDate"  Style="{StaticResource MaterialDesignFloatingHintDatePicker}" Margin="0 15 0 0" HorizontalAlignment="Left"  Width="200" x:Name="PatientBirthDatetDatePicker" />
+                            <TextBox Text="{Binding EditPatientDiagnosisTextBox}" materialDesign:HintAssist.Hint="Patient Diagnosis"  Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Margin="0 8 0 0" HorizontalAlignment="Left"  Width="200" x:Name="PatientDiagnosisTextBox" />
+                            <TextBlock  Text="{Binding textValidation}" Style="{StaticResource ErrorMsg}" x:Name="validation"/>
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
+                                <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsDefault="True"
+                                    Margin="0 8 8 0"
+                                    Command="{Binding editAppointmentPatient}">
+                                    <Button.CommandParameter>
+                                        <system:Boolean>True</system:Boolean>
+                                    </Button.CommandParameter>
+                                    SUBMIT
+                                </Button>
+                                <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsCancel="True"
+                                    Margin="0 8 8 0"
+                                    Command="materialDesign:DialogHost.CloseDialogCommand">
+                                    <Button.CommandParameter>
+                                        <system:Boolean>False</system:Boolean>
+                                    </Button.CommandParameter>
+                                    CANCEL
+                                </Button>
+                            </StackPanel>
+                        </StackPanel>
+                    </Button.CommandParameter>
+                </Button>
+                <Button  
+                        Style="{StaticResource DetailsButton}" 
+                        Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
+                        Margin="15 0 50 0" >
+                    <Button.CommandParameter>
+                        <StackPanel>
+                            <StackPanel Margin="16">
+                                <TextBlock  Text="Are You sure want to delete ?" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+                                <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                            IsDefault="True"
+                                            Margin="0 8 8 0"
+                                            Command="{Binding deleteAppointmentPatient}" >
+                                    <Button.CommandParameter>
+                                        <system:Boolean>True</system:Boolean>
+                                    </Button.CommandParameter>
+                                    YES
+                                </Button>
+                                <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                            IsCancel="True"
+                                            Margin="0 8 0 0"
+                                            Command="materialDesign:DialogHost.CloseDialogCommand">
+                                    <Button.CommandParameter>
+                                        <system:Boolean>False</system:Boolean>
+                                    </Button.CommandParameter>
+                                    NO
+                                </Button>
+                            </StackPanel>
+                        </StackPanel>
+                    </Button.CommandParameter>
+                    DELETE
+                </Button>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Grid.Column="0">
+                <TextBlock Text="Address" Style="{StaticResource DetailsInfoTitle}" />
+                <TextBlock Text="{Binding PatientAddress}" Style="{StaticResource DetailsInfoValue}" />
+            </StackPanel>
+            <StackPanel  Grid.Row="1" Grid.Column="1">
+                <TextBlock Text="BirthDate" Style="{StaticResource DetailsInfoTitle}" />
+                <TextBlock Text="{Binding PatientBirthDate}" Style="{StaticResource DetailsInfoValue}" />
+            </StackPanel>
+            <StackPanel Grid.Column="0" Grid.Row="2">
+                <TextBlock  Text="Diagnosis" Style="{StaticResource DetailsInfoTitle}" />
+                <TextBlock Text="{Binding PatientDiagnosis}" Style="{StaticResource DetailsInfoValue}" />
+            </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="2">
+                <TextBlock Text="Bill" Style="{StaticResource DetailsInfoTitle}" />
+                <TextBlock Text="{Binding PatientBill}" Style="{StaticResource DetailsInfoValue}" />
+            </StackPanel>
+            <!--Doctors List Dialogbox-->
+            <StackPanel Grid.Column="0" Grid.Row="4">
+                <materialDesign:DialogHost  HorizontalAlignment="Left" Margin="15 0 0 0" VerticalAlignment="Center">
+                    <Border  Style="{StaticResource DetailsDialogHostBorder}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <ListBox 
+                    ItemsSource="{Binding DoctorsList}" 
+                    Background="White"
+                    Foreground="{StaticResource PrimaryColor}" 
+                    x:Name="DoctorsList"
+                    DisplayMemberPath="Value"
+                    SelectedValuePath="Key" />
+                            <materialDesign:ColorZone Background="#0e263e" Grid.Row="1" Effect="{DynamicResource MaterialDesignShadowDepth5}">
+                                <TextBlock Text="{Binding DoctorsNumber}" Foreground="White" Margin="16"/>
+                            </materialDesign:ColorZone>
+
+                        </Grid>
+                    </Border>
+                </materialDesign:DialogHost>
+            </StackPanel>
+            <!--Appointments List Dialogbox-->
+            <StackPanel Grid.Column="1" Grid.Row="4">
+                <materialDesign:DialogHost  HorizontalAlignment="Left" Margin="15 0 0 0" VerticalAlignment="Center">
+                    <Border  Style="{StaticResource DetailsDialogHostBorder}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <ListBox 
+                            DisplayMemberPath="Value"
+                            SelectedValuePath="Key"
+                            ItemsSource="{Binding AppointmentsList}" 
+                            Background="White" 
+                            Foreground="{StaticResource PrimaryColor}" 
+                            x:Name="AppointmentsList"/>
+                            <materialDesign:ColorZone Background="#0e263e" Grid.Row="1" Effect="{DynamicResource MaterialDesignShadowDepth5}">
+                                <TextBlock Text="{Binding AppointmentsNumber}" Foreground="White" Margin="16"/>
+                            </materialDesign:ColorZone>
+                        </Grid>
+                    </Border>
+                </materialDesign:DialogHost>
+            </StackPanel>
+        </Grid>
     </Grid>
 </UserControl>
