--- a/HMS.WPF/Views/Components/AppointmentCard.xaml
+++ b/HMS.WPF/Views/Components/AppointmentCard.xaml
@@ -4,9 +4,61 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HMS.WPF.Views.Components"
-             mc:Ignorable="d" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             mc:Ignorable="d"
+             Margin="10"
              d:DesignHeight="100" d:DesignWidth="410">
+
     <Grid>
-            
+        <materialDesign:Card
+            HorizontalAlignment="Center" 
+            VerticalAlignment="Center" 
+            Background="White" 
+            Height="90" Width="400" Padding="5"
+            Foreground="{StaticResource DarkText}"
+            materialDesign:ShadowAssist.ShadowDepth="Depth1">
+
+            <StackPanel VerticalAlignment="Center">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="50" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="{Binding AppointmentDate}" Style="{StaticResource InfoValue}" FontSize="20" FontWeight="Bold"></TextBlock>
+                    <Button Command="{Binding deleteAppointment}" Grid.Column="1" Padding="0" Margin="8 0" HorizontalAlignment="Right" BorderThickness="0" Background="Transparent" Style="{StaticResource MaterialDesignRaisedDarkButton}" >
+                        <materialDesign:PackIcon Foreground="{StaticResource PrimaryColor}" Kind="DeleteForever"  VerticalAlignment="Top" HorizontalAlignment="Right"/>
+                    </Button>
+                </Grid>
+
+
+                <Grid Margin="0 5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="130"/>
+                        <ColumnDefinition Width="130"/>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="45"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Column="0">
+                        <TextBlock Style="{StaticResource InfoTitle}">Patient Name</TextBlock>
+                        <TextBlock Text="{Binding PatientName}" Style="{StaticResource InfoValue}"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <TextBlock Style="{StaticResource InfoTitle}">Doctor Name</TextBlock>
+                        <TextBlock Text="{Binding DoctorName}" Style="{StaticResource InfoValue}"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="2">
+                        <TextBlock Style="{StaticResource InfoTitle}">Duration</TextBlock>
+                        <TextBlock Text="{Binding Duration}" Style="{StaticResource InfoValue}"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="3">
+                        <TextBlock Style="{StaticResource InfoTitle}">Bill</TextBlock>
+                        <TextBlock Text="{Binding appointmentBill}" Style="{StaticResource InfoValue}"/>
+                    </StackPanel>
+                </Grid>
+            </StackPanel>
+        </materialDesign:Card>
     </Grid>
 </UserControl>
