--- a/HMS.WPF/Views/Components/RoomCard.xaml
+++ b/HMS.WPF/Views/Components/RoomCard.xaml
@@ -4,9 +4,46 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HMS.WPF.Views.Components"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+             Margin="10"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="540" d:DesignWidth="640">
+
     <Grid>
-            
+
+        <materialDesign:Card 
+            HorizontalAlignment="Center" 
+            VerticalAlignment="Center" 
+            Background="White" 
+            Height="90" Width="400" Padding="5"
+            Foreground="{StaticResource DarkText}"
+            materialDesign:ShadowAssist.ShadowDepth="Depth1">
+            <materialDesign:Card.InputBindings>
+                <MouseBinding 
+              Command="{Binding NavigateToDetailsAction}"
+              MouseAction="LeftClick"/>
+            </materialDesign:Card.InputBindings>
+            <StackPanel VerticalAlignment="Center">
+                <TextBlock Text="{Binding RoomNumber}" FontSize="24" FontWeight="Bold"/>
+                <Grid Margin="0 5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Column="0">
+                        <TextBlock Style="{StaticResource InfoTitle}">Type</TextBlock>
+                        <TextBlock Text="{Binding Type}" Style="{StaticResource InfoValue}"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <TextBlock Style="{StaticResource InfoTitle}">Capacity</TextBlock>
+                        <TextBlock Text="{Binding Capacity}" Style="{StaticResource InfoValue}"/>
+                    </StackPanel>
+                </Grid>
+            </StackPanel>
+        </materialDesign:Card>
+
     </Grid>
 </UserControl>
